修改大量论文

--- a/_publications/5.md
+++ b/_publications/5.md
@@ -4,5 +4,5 @@ collection: publications
 date: 2018-05-14
 venue: 'Peng M, Cheng D, Xie Q, et al.'
 
-citation: 'WISE, 2018'
+citation: 'International Conference on Web Information Systems Engineering (WISE), 2018'
 ---
