修改所属类别

--- a/_posts/1.md
+++ b/_posts/1.md
@@ -1,6 +1,6 @@
 ---
 title: "Regional Innovation Ecosystem"
-collection: publications
+collection: posts
 date: 2018-05-10
 venue: with Jieshuang He (the Chinese University of Hong Kong, Shenzhen)
 
