修改引用类别

--- a/_publications/101.md
+++ b/_publications/101.md
@@ -2,6 +2,7 @@
 title: "Regional Innovation Ecosystem"
 collection: posts
 date: 2018-05-10
+posts: posts
 venue: with Jieshuang He (the Chinese University of Hong Kong, Shenzhen)
 
 ---
