--- a/_publications/104.md
+++ b/_publications/104.md
@@ -3,5 +3,6 @@ title: "Self-Adaptive Quantitative System: three pre-conditions of AI applicatio
 collection: publications
 date: 2018-05-07
 venue: with Min Peng (Institution of Artificial Intelligence, Wuhan university)
+posts: posts
 
 ---
