--- a/_publications/102.md
+++ b/_publications/102.md
@@ -2,5 +2,6 @@
 title: "Social Influence on Academic Entrepreneurship: The Effect of Geographical and Cognitive proximity"
 collection: publications
 date: 2018-05-09
+posts: posts
 
 ---
