修复语法错误

--- a/_publications/1.md
+++ b/_publications/1.md
@@ -1,6 +1,7 @@
 ---
 title: "The Relationship between University-Industry Interactions and University Scientific Productivity: Evidence from China"
 collection: publications
+publications: publications
 date: 2018-05-10
 venue: 'Job Market Paper'
 link: http://laiyz.github.io/files/JMP_China_U-I_Interaction_&_Scientific_Productivity_Yanzhao_Lai.pdf
