--- a/_publications/3.md
+++ b/_publications/3.md
@@ -6,6 +6,7 @@ venue: 'with Nicholas Vonortas'
 publications: publications
 slide: http://laiyz.github.io/files/Lai_and_Vonortas_20181018_color_final.pdf
 
-abstract: '    This paper advances academic entrepreneurship studies by exploring how peer schools affect university patenting and licensing behaviors. The study argues that due to the competitive nature of the university environment, inter-university relationships are similar to inter-firm relationships and peer schools also have effect on each other’s entrepreneurial behavior such as university patenting and licensing behavior. Utilizing patenting information on 501 Chinese university between 2007 and 2015, our empirical results confirm that peer schools have positive effect on university patenting activities, and geographical and organizational proximity exert a stronger peer influence on the focal university patenting activities.'
+abstract:
+  - 'This paper advances academic entrepreneurship studies by exploring how peer schools affect university patenting and licensing behaviors. The study argues that due to the competitive nature of the university environment, inter-university relationships are similar to inter-firm relationships and peer schools also have effect on each other’s entrepreneurial behavior such as university patenting and licensing behavior. Utilizing patenting information on 501 Chinese university between 2007 and 2015, our empirical results confirm that peer schools have positive effect on university patenting activities, and geographical and organizational proximity exert a stronger peer influence on the focal university patenting activities.'
 
 ---
