--- a/_publications/4.md
+++ b/_publications/4.md
@@ -6,6 +6,7 @@ venue: 'with Nicholas Vonortas'
 publications: publications
 slide: http://laiyz.github.io/files/Returee_Academic_Entrepreneurship_20181110.pdf
 
-abstract: '    This paper aiming to understand the difference between returnee academics and non-returnee academics in terms of their innovation and entrepreneurial activities. Utilizing a panel data covering from 2007 to 2017 of 507 computer science faculties from 42 research-intensive universities in China, this study provides initial clues on how foreign educational backgrounds affect academics’ entrepreneurial activities. This study finds that academics with foreign educational background are more likely to involve into entrepreneurship, and returnee academics with a Ph.D. overseas are more likely to involve into entrepreneurship than returnee academics with only Postdoc experience overseas.'
+abstract:
+  - 'This paper aiming to understand the difference between returnee academics and non-returnee academics in terms of their innovation and entrepreneurial activities. Utilizing a panel data covering from 2007 to 2017 of 507 computer science faculties from 42 research-intensive universities in China, this study provides initial clues on how foreign educational backgrounds affect academics’ entrepreneurial activities. This study finds that academics with foreign educational background are more likely to involve into entrepreneurship, and returnee academics with a Ph.D. overseas are more likely to involve into entrepreneurship than returnee academics with only Postdoc experience overseas.'
 
 ---
