增加,分隔并修复格式

--- a/_publications/101.md
+++ b/_publications/101.md
@@ -1,5 +1,5 @@
 ---
-title: "Regional Innovation Ecosystem"
+title: "Regional Innovation Ecosystem,"
 collection: posts
 date: 2018-05-10
 posts: posts
