--- a/_publications/2.md
+++ b/_publications/2.md
@@ -1,8 +1,8 @@
 ---
-title: "Regional Entrepreneurial Ecosystem in China"
+title: "Regional Entrepreneurial Ecosystem in China,"
 collection: publications
 date: 2018-05-09
-venue: 'with Nicholas Vonortas'
+venue: 'with Nicholas Vonortas,'
 citation: R&R Industrial and Corporate Change
 link: http://laiyz.github.io/files/Entrepreneurial_Ecosystems_in_China_Lai-Vonortas.pdf
 publications: publications
