--- a/_publications/3.md
+++ b/_publications/3.md
@@ -1,5 +1,5 @@
 ---
-title: "Do Peer Schools Affect University Patenting and Licensing: Evidence from China"
+title: "Do Peer Schools Affect University Patenting and Licensing: Evidence from China,"
 collection: publications
 date: 2018-05-08
 venue: 'with Nicholas Vonortas'
