--- a/_publications/104.md
+++ b/_publications/104.md
@@ -1,5 +1,5 @@
 ---
-title: "Self-Adaptive Quantitative System: three pre-conditions of AI application in automatic trading"
+title: "Self-Adaptive Quantitative System: three pre-conditions of AI application in automatic trading,"
 collection: publications
 date: 2018-05-07
 venue: with Min Peng (Institution of Artificial Intelligence, Wuhan university)
