补充丢失的逗号

--- a/_publications/1.md
+++ b/_publications/1.md
@@ -1,5 +1,5 @@
 ---
-title: "The Relationship between University-Industry Interactions and University Scientific Productivity: Evidence from China"
+title: "The Relationship between University-Industry Interactions and University Scientific Productivity: Evidence from China,"
 collection: publications
 publications: publications
 date: 2018-05-10
